--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
             <div class="box"  data-aos="fade-left">
                 <img src="images/work1.webp" alt="">
                 <div class="desc" data-aos="fade-up">
-                    <h3> Basci progect <i class="fa fa-star"></i></h3>
+                    <h3> Basic Project <i class="fa fa-star"></i></h3>
                     <a href="#">Learn More</a>
                 </div>
             </div>
             <div class="box"  data-aos="fade-up">
                 <img src="images/work2.webp" alt="">
                 <div class="desc" data-aos="fade-up">
-                    <h3> Premium progect <i class="fa fa-star"></i> <i class="fa fa-star"></i></h3>
+                    <h3> Premium Project <i class="fa fa-star"></i> <i class="fa fa-star"></i></h3>
                     <a href="#">Learn More</a>
                 </div>
             </div>
             <div class="box" data-aos="fade-up">
                 <img src="images/work3.webp" alt="">
                 <div class="desc" data-aos="fade-up">
-                    <h3> Gold progect <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></h3>
+                    <h3> Gold Project <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></h3>
                     <a href="#">Learn More</a>
                 </div>
             </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="prices">
                 <div class="box" data-aos="fade-up">
-                    <h2>basic <br><i class="fa fa-star"></i></h2>
+                    <h2>Basic <br><i class="fa fa-star"></i></h2>
                     <div class="number">
                         <span>200</span>
                     </div>
@@ -99,7 +99,7 @@
                     <a href="#">Buy Now</a>
                 </div>
                 <div class="box">
-                    <h2>premium <br><i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
+                    <h2>Premium <br><i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
                     <div class="number">
                         <span>500</span>
                     </div>
@@ -109,7 +109,7 @@
                     <a href="#">Buy Now</a>
                 </div>
                 <div class="box" data-aos="fade-down">
-                    <h2>pro <br><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
+                    <h2>Gold <br><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
                     <div class="number">
                         <span>1000</span>
                     </div>
