--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="contact">
                     <div class="sociale">
                         <a href="https://web.facebook.com/profile.php?id=100071168709455" target="blank"><i class="fb fab fa-facebook-f"></i> </a>
-                        <a href="https://www.instagram.com/ermilimed" target="_blank"><i class="inst fab fa-instagram"></i> </a>
+                        <a href="https://www.instagram.com/simo_rmili10" target="_blank"><i class="inst fab fa-instagram"></i> </a>
                         <a href="https://web.whatsapp.com" target="_blank"><i class="wtsp fab fa-whatsapp"></i> </a>
                     </div> 
                 </div>
