--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -47,7 +47,7 @@
                     <span>Ermili Mohamed</span>
                     <h2>I'm a freelance Front End Devevloper</h2>
                     <p>
-                        20 years old based in Taounate,Morooco. and I'm very passionate and dedicated to my work.With 2 years experience as a Front End Devevloper,I've acquired the skills necessary to build great and premium website interface.
+                        20 years old live in casablanca,Morocco. and I'm very passionate and dedicated to my work.With 2 years experience as a Front End Devevloper,I've acquired the skills necessary to build great and premium website interface.
                     </p>
                     <a href="#">Read More..</a>
                 </div>
@@ -55,70 +55,73 @@
         </div>
     </section>
     <section class="project" id="Works" data-aos="fade-up">
-        <div class="main-title">
-            <h2 class="">My Works</h2>
-        </div>
-        <div class="container">
-            <div class="box"  data-aos="fade-left">
-                <img src="images/work1.webp" alt="">
-                <div class="desc" data-aos="fade-up">
-                    <h3> Basic <i class="fas fa-star"></i></h3>
-                    <a href="index-more.html">Reade More</a>
-                </div>
-            </div>
-            <div class="box"  data-aos="fade-up">
-                <img src="images/work2.webp" alt="">
-                <div class="desc" data-aos="fade-up">
-                    <h3> Advanced <i class="fas fa-star"></i> <i class="fas fa-star"></i></h3>
-                    <a href="index-more.html">Reade More</a>
-                </div>
-            </div>
-            <div class="box" data-aos="fade-up">
-                <img src="images/work3.webp" alt="">
-                <div class="desc" data-aos="fade-up">
-                    <h3>Professional <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h3>
-                    <a href="index-more.html">Reade More</a>
-                </div>
-            </div>
-        </div>
+      <div class="main-title">
+          <h2 class="">My Works</h2>
+      </div>
+      <div class="container">
+          <div class="box"  data-aos="fade-left">
+              <img src="images/work1.webp" alt="">
+              <div class="desc" data-aos="fade-up">
+                  <h3> Basic <i class="fas fa-star"></i></h3>
+                  <a href="index-more.html">Reade More</a>
+              </div>
+          </div>
+          <div class="box"  data-aos="fade-up">
+              <img src="images/work2.webp" alt="">
+              <div class="desc" data-aos="fade-up">
+                  <h3> Advanced <i class="fas fa-star"></i> <i class="fas fa-star"></i></h3>
+                  <a href="index-more.html">Reade More</a>
+              </div>
+          </div>
+          <div class="box" data-aos="fade-up">
+              <img src="images/work3.webp" alt="">
+              <div class="desc" data-aos="fade-up">
+                  <h3>Professional <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></h3>
+                  <a href="index-more.html">Reade More</a>
+              </div>
+          </div>
+      </div>
     </section>
     <section class="services" id="Services" data-aos="fade-up">
-        <div class="container">
-            <div class="main-title">
+    <div class="container">
+          <div class="main-title">
                 <h2 class="">services</h2>
             </div>
             <div class="prices">
-                <div class="box" data-aos="fade-up">
-                    <h2>basic <br><i class="fa fa-star"></i></h2>
-                    <div class="number">
-                        <span>200</span>
-                    </div>
-                    <span class="cond">1 page</span>
-                    <span class="cond">1 modification</span>
-                    <span class="cond">5 hours</span>
-                    <a href="#">Buy Now</a>
-                </div>
-                <div class="box">
-                    <h2>premium <br><i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
-                    <div class="number">
-                        <span>500</span>
-                    </div>
-                    <span class="cond">5 page</span>
-                    <span class="cond">3 modification</span>
-                    <span class="cond">24 hours</span>
-                    <a href="#">Buy Now</a>
-                </div>
-                <div class="box" data-aos="fade-down">
-                    <h2>pro <br><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
-                    <div class="number">
-                        <span>1500</span>
-                    </div>
-                    <span class="cond">15 page</span>
-                    <span class="cond">10 modification</span>
-                    <span class="cond">5 days</span>
-                    <a href="#">Buy Now</a>
-                </div>
-            </div>
+              <div class="box" data-aos="fade-up">
+                  <h2>basic <br><i class="fa fa-star"></i></h2>
+                  <div class="number">
+                      <span>200</span>
+                  </div>
+                  <span class="cond">1 page</span>
+                  <span class="cond">unresponsive</span>
+                  <span class="cond">2 days</span>
+                  <span class="cond">No Source Code</span>
+                  <a href="#">Buy Now</a>
+              </div>
+              <div class="box" data-aos="fade-down">
+                  <h2> Standar <br><i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
+                  <div class="number">
+                      <span>500</span>
+                  </div>
+                  <span class="cond">3 pages</span>
+                  <span class="cond">responsive</span>
+                  <span class="cond">5 days </span>
+                  <span class="cond">Source Code</span>
+                  <a href="#">Buy Now</a>
+              </div>
+              <div class="box" data-aos="fade-down">
+                  <h2>Premium <br><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></h2>
+                  <div class="number">
+                      <span>1500</span>
+                  </div>
+                  <span class="cond">6 page</span>
+                  <span class="cond">Responsive</span>
+                  <span class="cond">10 days</span>
+                  <span class="cond">Source Code</span>
+                  <a href="#">Buy Now</a>
+              </div>
+          </div>
         </div>
     </section>
     <footer id="Contact-me">
@@ -140,9 +143,18 @@
                 </div>
                 <div class="contact">
                     <div class="sociale">
-                        <a href="https://web.facebook.com/profile.php?id=100071168709455" target="blank"><i class="fb fab fa-facebook-f"></i> </a>
-                        <a href="https://www.instagram.com/ermilimed" target="_blank"><i class="inst fab fa-instagram"></i> </a>
-                        <a href="https://web.whatsapp.com" target="_blank"><i class="wtsp fab fa-whatsapp"></i> </a>
+                      <a href="https://web.facebook.com/profile.php?id=100071168709455" target="blank">
+                        <i class="fb fab fa-facebook-f"></i>
+                        <span class="fb">Mohamed Ermili</span> 
+                    </a>
+                    <a href="https://www.instagram.com/ermilimed" target="_blank">
+                        <i class="inst fab fa-instagram"></i> 
+                        <span class="inst">ermilimed</span> 
+                    </a>
+                    <a href="https://web.whatsapp.com" target="_blank">
+                        <i class="wtsp fab fa-whatsapp"></i> 
+                        <span class="wtsp">0693993570</span> 
+                    </a>
                     </div> 
                 </div>
             </div>
